EC2_Using_Existing_SG.tf
/*
provider "aws" {
  region = "ap-south-1"
}

resource "aws_instance" "ec2-instance" {
    ami = "ami-0d176f79571d18a8f"
    instance_type = "t2.micro"
    key_name = "Mumbai_server_key"
    vpc_security_group_ids = ["sg-02f875775bcb86930"] # To add existing VPC security group IDs
    tags = {
        name = "My-EC2-Instance"
    }
}
*/
